Updated configuration file

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,6 @@
-[net]
-IP_MASK=127.0.0.1
-PORT=8080
-remote_files_loc=remote_files
+[web]
+app_title = "Websocket Chat"
+remote_files_loc = "remote_files"
 
 [others]
-channels_loc=channels.json
+channels_loc = "channels.json"
